fix dark mode

--- a/static/css/nix.css
+++ b/static/css/nix.css
@@ -82,6 +82,7 @@ i {
 	float: left;
 	color: rgb(0, 255, 21);
 	font-size: x-large;
+	filter: drop-shadow(0 1px 3px);
 }
 
 .post-date {
